--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ html {
   scroll-padding-top: 6rem;
   scroll-behavior: smooth;
 }
+
 section{
   padding: 1.5 rem 9%;
 }
@@ -50,7 +51,6 @@ section{
   color: var(--orange);
 }
 
-/*=============================Navbar=============================*/
 header {
   position: fixed;
   top: 0;
@@ -91,6 +91,7 @@ header .navbar a {
 header .navbar a:hover {
   color: var(--orange);
 }
+
 header .icons i {
   font-size: 2rem;
   color: #fff;
@@ -142,11 +143,11 @@ header .search-bar-container label {
   font-size: 3rem;
   margin-left: 1.5rem;
 }
+
 header .search-bar-container label:hover {
   color: var(--orange);
 }
- 
-/*=============================login page=============================*/
+
 .login-form-container {
   position: fixed;
   top:-120%;
@@ -231,7 +232,17 @@ header .search-bar-container label:hover {
   cursor: pointer;
 }
 
-/*=============================home=============================*/
+#menu-bar{
+  color: #fff;
+  border: .1rem solid #fff;
+  border-radius:.5rem;
+  font-size: 2rem;
+  padding: .5rem 1.2rem;
+  margin-left: 10px;
+  cursor: pointer;
+  display: none;
+}
+
 .home{
   min-height: 100vh;
   display: flex;
@@ -418,4 +429,481 @@ header .search-bar-container label:hover {
   width: 200px;
   height:200px;
   flex: 1;
+}
+
+/*=============================Places===============================*/
+.packages-text {
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.packages-text small {
+  font-family: Roboto;
+  color: #ffc342;
+  font-size: 20px;
+  font-weight: bolder;
+}
+
+.packages-text h2 {
+  font-family: Barlow Condensed;
+  font-size: 55px;
+  color: #191d34;
+  letter-spacing: 1px;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 30px;
+  align-items: center;
+  justify-items: center;
+  text-align: center;
+  background-size: cover;
+}
+
+.card {
+  border: 1px solid lightgray;
+  box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, 0.288);
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  width: 80%;
+  height: auto;
+}
+
+.card img {
+  max-width: 100%;
+  height: 300px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.cards .text {
+  padding: 20px;
+  font-family: Barlow Condensed;
+  line-height: 50px;
+}
+
+.cards .card-box {
+  display: flex;
+  flex-flow: row;
+  background-color: #fde02f;
+  font-size: 18px;
+  font-family: Roboto;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.cards .time {
+  flex: 1;
+  cursor: pointer;
+}
+
+.cards .location {
+  flex: 2;
+  cursor: pointer;
+}
+
+.cards .cost {
+  color: #4cafad;
+  font-size: 20px;
+}
+
+.location:hover{
+  background-color: #fde02f;
+  transform: scale(1.1);
+}
+
+/*------------Zoom in Photos--------------*/
+.zoom-img {
+  float: left;
+  position: relative;
+  width: 100%;
+  height: 320px;
+  overflow: hidden;
+}
+
+.zoom-img .img-card {
+  position: absolute;
+  overflow: hidden;
+}
+
+.img-card img {
+  -webkit-transition: 0.8s ease;
+  transition: 0.8s ease;
+}
+
+.card:hover .zoom-img img {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+/*=========================About Us=========================*/
+#About-Us {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: center;
+  padding: 150px;
+  cursor: pointer;
+}
+
+.about-img {
+  flex: 1;
+}
+
+.about-img img {
+  width: 500px;
+  height: 680px;
+  box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, 0.4);
+}
+
+.about-img img:hover{
+  -webkit-transition: 0.8s ease;
+  transition: 0.8s ease;
+  transform: scale(1.1);
+}
+
+.about-text {
+  flex: 1;
+  width: 100px;
+  display: flex;
+  flex-flow: column wrap;
+}
+
+.about-text small,
+.about-text p,
+.about-text input,
+.about-text a {
+  flex: 0.5;
+  font-family: Roboto;
+}
+
+.about-text small {
+  color: #ffc342;
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.about-text h2 {
+  flex: 0.5;
+  font-family: Barlow Condensed;
+  font-size: 60px;
+  color: #191d34;
+  width: 450px;
+}
+
+.about-text label {
+  padding-bottom: 10px;
+  color: #506172;
+  font-weight: bolder;
+  font-family: Roboto;
+  letter-spacing: 1px;
+  font-size:small;
+}
+
+.about-text p {
+  width: 500px;
+  line-height: 30px;
+  color: #506172;
+  font-size: medium;
+  font-weight: bolder;
+  padding: 50px 0;
+}
+
+.about-text a {
+  background-color: #fff;
+  border: 2px solid #014b85;
+  text-decoration: none;
+  border-radius: 5px;
+  width: 180px;
+  padding: 20px;
+  text-align: center;
+  margin-top: 50px;
+  color: #014b85;
+  font-weight: bolder;
+  font-size: 20px;
+}
+
+.about-text a:hover {
+  background-color: #014b85;
+  color: #fff;
+}
+
+/*===============Footer===================*/
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+footer {
+  background-color: #33353d;
+  color: #818a91;
+  text-align: center;
+  padding: 20px 0px;
+  height: 50vh;
+}
+
+h2{
+  margin: 30px;
+  font-size: medium;
+}
+
+h2:hover{
+  color: #eceeef;
+  transition: all 0.2s linear;
+}
+.contact-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.footer-links a {
+  color:#818a91;
+  text-decoration: none;
+  margin: 0 15px;
+  font-size: 16px;
+  margin: 20px;
+}
+
+.footer-links a:hover{
+  color: #eceeef;
+  transition: all 0.2s linear;
+}
+.footer-social a {
+  background-color: #eceeef;
+  color: #818a91;
+  font-size: 16px;
+  display: inline-block;
+  line-height: 44px;
+  width: 44px;
+  height: 44px;
+  text-align: center;
+  margin-right: 8px;
+  border-radius: 100%;
+  transition: all 0.2s linear;
+  margin: 15px;
+}
+.footer-social a:hover {
+  color: #fff;
+  background-color: #29aafe;
+}
+.footer-social a.facebook:hover {
+  background-color: #3b5998;
+}
+.footer-social a.twitter:hover {
+  background-color: #00aced;
+}
+.footer-social a.linkedin:hover {
+  background-color: #007bb6;
+}
+.footer-social a.dribbble:hover {
+  background-color: #ea4c89;
+}
+.footer-copy {
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+/*==========================Responsive=============================*/
+@media all and (max-width: 1172px) {
+  .banner-text-item .form {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+  }
+
+  .banner-text-item .form input,
+  .banner-text-item .form .date,
+  .banner-text-item .form a {
+    flex: 1;
+    margin-bottom: 5px;
+    font-size: 14px;
+  }
+
+  .banner-text-item .form input {
+    width: 60%;
+  }
+
+  .banner-text-item .form .date {
+    width: 30%;
+  }
+
+  .banner-text-item .form .book {
+    width: 10%;
+    font-size: 14px;
+  }
+
+  .banner-heading h1 {
+    font-size: 60px;
+  }
+}
+
+@media all and (max-width: 1414px) {
+  .banner-text-item .form input {
+    width: 40%;
+  }
+
+  .banner-text-item .form .date {
+    width: 30%;
+  }
+
+  .banner-text-item .form .book {
+    width: 20%;
+    font-size: 14px;
+  }
+}
+
+@media all and (max-width: 942px) {
+  .nav-bar {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    text-align: center;
+    position: static;
+  }
+
+  .logo {
+    flex: 1;
+    font-size: 30px;
+    margin: 10px auto;
+    font-family: Satisfy;
+    color: #fde02f;
+  }
+
+  .nav-bar ul {
+    display: none;
+  }
+
+  .nav-bar ul li {
+    flex: 1;
+    margin-bottom: 5px;
+    font-size: 14px;
+  }
+
+  .services {
+    display: flex;
+    flex-flow: column wrap;
+  }
+
+  .services .service-item {
+    flex: 1;
+    margin-bottom: -130px;
+    width: 400px;
+  }
+
+  .places-text {
+    margin-top: 200px;
+  }
+}
+
+@media all and (max-width: 928px) {
+  .banner .form input,
+  a {
+    font-size: 12px;
+  }
+}
+
+@media all and (max-width: 1173px) {
+  .banner .form {
+    background-color: transparent;
+  }
+}
+
+@media all and (max-width: 1194px) {
+  .places .card-box p {
+    font-size: 14px;
+  }
+}
+
+@media all and (max-width: 1086px) {
+  .places .cards .text {
+    line-height: 40px;
+  }
+
+  .cards .text .h2 {
+    font-size: 12px;
+  }
+
+  .cards .img-card img {
+    height: 260px;
+  }
+}
+
+@media all and (max-width: 974px) {
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    grid-gap: 20px;
+  }
+
+  .card {
+    width: 300px;
+    height: 500px;
+    margin: auto;
+  }
+
+  .cards .text {
+    padding: 5px;
+    font-family: Barlow Condensed;
+  }
+}
+
+@media all and (max-width: 1334px) {
+  .about-img img {
+    width: 300px;
+    height: 500px;
+  }
+}
+
+@media all and (max-width: 1116px) {
+  .about {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .about-img {
+    flex: 1;
+    margin-bottom: 20px;
+  }
+
+  .about-text {
+    flex: 1;
+    margin: auto;
+    text-align: center;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .about-text h2 {
+    font-size: 35px;
+  }
+
+  .about-img img {
+    width: 400px;
+    height: 400px;
+  }
+}
+
+@media all and (max-width: 708px) {
+  .footer {
+    width: 100%;
+    height: 670px;
+    position: relative;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+  }
 }
